--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,20 @@
+#
+[GateWay]
 Endpoint = "wss://bsc-ws-node.nariox.org:443"
 
+# mogodb database connection config
+[MongoDB]
+DBURL = "localhost:27017"
+DBName = "dbname"
+UserName = "user"
+Password = "passwd"
+Enable = true
+
+[BlockChain]
+Chain = "bsc"
+SyncNumber = 25
+
+[SwapPost]
 SwapinTokens = [
 	#pairid,contractAddress,depositAddress,rpc
 	"BIFIxx,0x...,0x...,http://serverIP:port/rpc",
@@ -9,13 +24,4 @@ SwapoutTokens = [
 	#pairid,contractAddress,rpc
 	"BIFIxx,0x...,http://serverIP:port/rpc",
 ]
-
-# modgodb database connection config
-[MongoDB]
-DBURL = "localhost:27017"
-DBName = "dbname"
-UserName = "user"
-Password = "passwd"
-Enable = true
-BlockChain = "bsc"
 
